# Vector-Graphics-Conversion

./: CHANGELOG.md  README.md  README_BATCH_GUI.md  README_CN.md  batch_converter.html  hierarchical_mode_explanation.txt  python_gui.py  python_gui_cli.py  vtracer_batch_gui.py  vtracer_diagnostic.py  vtracer_params.txt
.github/workflows/: python.yml
build_pyinstaller/: VTracerBatchGUI.spec
build_pyinstaller/VTracerBatchGUI/: Analysis-00.toc  COLLECT-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.pyz  PYZ-00.toc  VTracerBatchGUI.pkg  xref-VTracerBatchGUI.html
cmdapp/: Cargo.toml  README.md  output_ai.ai  pyproject.toml
cmdapp/src/: config.rs  converter.rs  main.rs  python.rs  svg.rs
cmdapp/vtracer/: __init__.py  vtracer.pyi
dist_batch_gui/VTracerBatchGUI/_internal/: _bz2.pyd  _decimal.pyd  _hashlib.pyd  _lzma.pyd  _socket.pyd  _tkinter.pyd  select.pyd  unicodedata.pyd
docs/: index.html
webapp/app/: package-lock.json
新新矢量图/: 使用说明.txt
新新矢量图/_internal/: _bz2.pyd  _decimal.pyd  _hashlib.pyd  _lzma.pyd  _socket.pyd  _tkinter.pyd  select.pyd  unicodedata.pyd
