[package]
name = "vtracer"
version = "0.6.12"
authors = ["Chris Tsang <chris.2y3@outlook.com>"]
edition = "2021"
description = "A cmd app to convert images into vector graphics."
license = "MIT OR Apache-2.0"
homepage = "http://www.visioncortex.org/vtracer"
repository = "https://github.com/visioncortex/vtracer/"
categories = ["graphics"]
keywords = ["svg", "computer-graphics"]

[dependencies]
clap = "2.33.3"
image = "0.23.10"
visioncortex = { version = "0.8.8" }
fastrand = { version = "2.3" }
pyo3 = { version = "0.19.0", optional = true }
resvg = "0.29.0"
usvg = "0.29.0"
pdf-writer = "0.8.0"
fop-pdf-renderer = "0.1.0"

[features]
python-binding = ["pyo3"]
wasm = ["fastrand/js"]

[lib]
name = "vtracer"
crate-type = ["rlib", "cdylib"]